--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>TX1 LITE REAL PRO v1.8.2 AJUSTADA</title>
+  <title>Robô Crypto IDX - Stockity</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>TX1 LITE REAL PRO v1.8.2</h1>
-    <div class="painel-central">
-      <div class="coluna-esquerda">
-        <p>Comando Atual: <span id="comando">ESPERAR</span></p>
-        <p>Score de Confiança: <span id="score">--%</span></p>
-        <p>Próxima Leitura em: <span id="timer">60</span>s</p>
-        <p>Última Análise: <span id="hora">--:--:--</span></p>
-        <div>
-          <h3>Critérios Técnicos</h3>
-          <ul id="criterios"></ul>
-        </div>
-        <div>
-          <button onclick="registrar('WIN')">WIN</button>
-          <button onclick="registrar('LOSS')">LOSS</button>
-          <p>Histórico: <span id="historico">0 WIN / 0 LOSS</span></p>
-        </div>
+    <h1>🤖 Robô Crypto IDX (Stockity)</h1>
+    <div class="panel">
+      <div class="signal" id="signal">
+        <span>AGUARDANDO...</span>
+        <p class="confidence">Confiança: <span id="confidence">--%</span></p>
       </div>
-      <div class="coluna-direita">
-        <h3>Últimos Sinais</h3>
-        <ul id="ultimos"></ul>
+      <div class="indicators">
+        <h3>📊 Indicadores</h3>
+        <ul>
+          <li>EMA (7/21): <span id="ema">--</span></li>
+          <li>RSI (12): <span id="rsi">--</span></li>
+          <li>ADX (14): <span id="adx">--</span></li>
+        </ul>
       </div>
     </div>
-    <iframe class="grafico" src="https://s.tradingview.com/widgetembed/?symbol=FX_IDC:EURUSD&interval=1&theme=dark"
-      width="100%" height="260" frameborder="0"></iframe>
   </div>
-  <audio id="som-call" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg" preload="auto"></audio>
-  <audio id="som-put" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
   <script src="script.js"></script>
 </body>
 </html>
